<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10sp">

        <TextView
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"

            android:text="@string/cfims"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10sp">

        <TextView
            android:layout_width="0dp"
            android:paddingTop="30dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"

            android:text="@string/candy" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10sp">
        <TextView
            android:layout_width="0dp"
            android:paddingTop="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.25"

            android:text="@string/management" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="300dp"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/hint_email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:lines="1"
        android:layout_below="@+id/email"/>

    <Button
        android:id="@+id/login"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:background="@drawable/homebuttons"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/open_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="73dp"

        android:layout_alignBottom="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="173dp"
        android:layout_marginLeft="173dp"
        android:layout_marginTop="-69dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="112dp"
        app:srcCompat="@drawable/logored" />




</RelativeLayout>